--- a/style.css
+++ b/style.css
@@ -107,42 +107,69 @@ main section {
   padding: 20px;
 }
 
-main section div {
+main section {
   display: grid;
-  gap: 10px;
-  height: auto;
-  max-height: 17.5rem;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
 
-  /* padding: 10px 10px; */
-  /* display: block;
-  flex-shrink: 1; */
-  /* height: auto;
-  max-height: 17.5rem;
-  object-fit: cover;
-  object-position: center; */
-  /* margin: 0;
-  max-width: 100%;
-  vertical-align: top;
-  width: auto; */
+main section div.grid-item {
+  height: 25rem;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
-main section img {
-  /* height: auto; */
-  height: 17.5rem;
-  width: 27.5rem;
+main section div.grid-item a {
+  background-color: #fff;
+  padding: 5px 20px;
+  border-radius: 15px;
+  color: rgba(73, 73, 73, 0.804);
+  font-family: "DM Sans", sans-serif;
+  letter-spacing: 0.025rem;
+  font-size: 1.125em;
+  line-height: 1.875;
+  font-weight: 600;
+  text-decoration: none;
+  transition-duration: 0.3s;
+  margin: 10px;
 }
+
+main section div.grid-item a:hover {
+  text-decoration: underline;
+  color: rgb(0, 55, 255);
+}
+
+
 .item1 {
-  grid-column: 1/2;
+  grid-column: 1/3;
   grid-row: 1;
+  background: url(img/hamburger.jpg);
+  background-size: cover;
+  background-position: center;
 }
-.item1 {
-  grid-column: 2/3;
-  grid-row: 1;
-}
-
-/* .item1 {
-  flex: 0 0 100px;
-}
-
 .item2 {
-  flex-grow: ;
-} */
+  grid-column: 3/5;
+  grid-row: 1;
+  background: url(img/game.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.item3 {
+  grid-column: 1/5;
+  grid-row: 2;
+  background: url(img/luxcrain.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.item4 {
+  grid-column: 1/4;
+  grid-row: 3;
+  background: url(img/header.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
