--- a/style.css
+++ b/style.css
@@ -5,20 +5,16 @@
 }
 body {
   background: #e3e3e3;
+  height: 100vh;
 }
 
 /* header  */
 #header {
-  display: flex;
   background: white;
-  width: 80%;
-  margin: 50px auto;
-  border-radius: 15px;
   padding: 20px;
 }
 
 #header div {
-  width: 50%;
   text-align: center;
 }
 
@@ -29,13 +25,13 @@ body {
 }
 
 #header div:first-of-type {
-  border-right: 3px solid rgba(83, 97, 99, 0.6);
+  border-bottom: 3px solid rgba(83, 97, 99, 0.6);
 }
 
 header h2 {
   color: #686868;
   font-family: "DM Sans", sans-serif;
-  font-size: 6em;
+  font-size: 3em;
   line-height: 1;
   font-weight: 500;
 }
@@ -44,10 +40,10 @@ header p {
   color: rgba(83, 97, 99, 0.6);
   font-family: "DM Sans", sans-serif;
   letter-spacing: 0.025rem;
-  width: calc(100% + 0.025rem);
   font-size: 1.125em;
   line-height: 1.875;
   font-weight: 400;
+  padding: 20px;
 }
 
 ul {
@@ -58,7 +54,6 @@ header a {
   color: rgba(73, 73, 73, 0.6);
   font-family: "DM Sans", sans-serif;
   letter-spacing: 0.025rem;
-  /* width: calc(100% + 0.025rem); */
   font-size: 1.125em;
   line-height: 1.875;
   font-weight: 600;
@@ -85,41 +80,47 @@ header li {
 
 /* main  */
 main {
-  display: flex;
   background-color: white;
-  width: 80%;
-  margin: auto;
-  border-radius: 15px;
 }
 
 main article {
-  width: 25%;
+  margin: auto 20px;
+  border-bottom: 3px solid rgba(83, 97, 99, 0.6);
+  text-align: center;
+}
+
+main article h2 {
+  color: #686868;
+  font-family: "DM Sans", sans-serif;
+  font-size: 2.5em;
+  font-weight: 500;
+}
+
+main article p {
+  color: rgba(83, 97, 99, 0.6);
+  font-family: "DM Sans", sans-serif;
+  letter-spacing: 0.025rem;
+  font-size: 1em;
+  line-height: 1.875;
+  font-weight: 400;
   padding: 20px;
-  border-right: 3px solid rgba(83, 97, 99, 0.6);
-  margin: 20px;
 }
 
 main section {
-  display: flex;
-  flex-wrap: wrap;
-  width: 75%;
-  gap: 20px;
-  padding: 20px;
-}
-
-main section {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 20px;
+  width: 90%;
+  margin: auto;
 }
 
 main section div.grid-item {
-  height: 25rem;
-  width: 100%;
+  height: 20rem;
+  margin: 20px 0;
+  border-radius: 10px;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 main section div.grid-item a {
   background-color: #fff;
@@ -141,43 +142,101 @@ main section div.grid-item a:hover {
   color: rgb(0, 55, 255);
 }
 
-
 .item1 {
-  grid-column: 1/3;
-  grid-row: 1;
   background: url(img/hamburger.jpg);
-  background-size: cover;
-  background-position: center;
 }
 .item2 {
-  grid-column: 3/5;
-  grid-row: 1;
   background: url(img/game.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 .item3 {
-  grid-column: 1/5;
-  grid-row: 2;
   background: url(img/luxcrain.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 .item4 {
-  grid-column: 1/4;
-  grid-row: 3;
   background: url(img/header_my.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 .item5 {
-  grid-column: 4/5;
-  grid-row: 3;
   background: url(img/header.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 576px) {
+  #header {
+    display: flex;
+    background: white;
+    width: 80%;
+    margin: 50px auto;
+    border-radius: 15px;
+    padding: 20px;
+  }
+
+  #header div {
+    width: 50%;
+    text-align: center;
+  }
+  #header div:first-of-type {
+    border-right: 3px solid rgba(83, 97, 99, 0.6);
+    border-bottom: none;
+  }
+
+  main {
+    display: flex;
+    background-color: white;
+    width: 80%;
+    margin: auto;
+    border-radius: 15px;
+  }
+
+  main article {
+    width: 25%;
+    padding: 20px;
+    border-right: 3px solid rgba(83, 97, 99, 0.6);
+    border-bottom: none;
+    margin: 20px;
+  }
+
+  main section {
+    display: flex;
+    flex-wrap: wrap;
+    width: 75%;
+    gap: 20px;
+    padding: 20px;
+  }
+
+  main section {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+  }
+
+  main section div.grid-item {
+    height: 25rem;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+.item1 {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+  .item2 {
+    grid-column: 3/5;
+    grid-row: 1;
+  }
+  .item3 {
+    grid-column: 1/5;
+    grid-row: 2;
+  }
+  .item4 {
+    grid-column: 1/4;
+    grid-row: 3;
+  }
+  .item5 {
+    grid-column: 4/5;
+    grid-row: 3;
+  }
+}
+
+@media screen and (min-width: 992px) {
 }
