--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ header li {
 /* main  */
 main {
   background-color: white;
+  padding-bottom: 20px;
 }
 
 main article {
@@ -113,7 +114,7 @@ main section {
 
 main section div.grid-item {
   height: 20rem;
-  margin: 20px 0;
+  margin: 10px 0;
   border-radius: 10px;
   display: flex;
   justify-content: flex-end;
@@ -124,7 +125,7 @@ main section div.grid-item {
 }
 main section div.grid-item a {
   background-color: #fff;
-  padding: 5px 20px;
+  padding: 5px 25px;
   border-radius: 15px;
   color: rgba(73, 73, 73, 0.804);
   font-family: "DM Sans", sans-serif;
@@ -135,11 +136,18 @@ main section div.grid-item a {
   text-decoration: none;
   transition-duration: 0.3s;
   margin: 10px;
+  border: 1px solid rgba(73, 73, 73, 0.6);
+  box-shadow: 1px 2px 0px rgba(0, 0, 0, 0.418);
+
 }
 
 main section div.grid-item a:hover {
   text-decoration: underline;
   color: rgb(0, 55, 255);
+  box-shadow: 1px 2px 0px rgb(0, 0, 0);
+  background-color: #ececec;
+
+
 }
 
 .item1 {
@@ -155,6 +163,9 @@ main section div.grid-item a:hover {
   background: url(img/header_my.png);
 }
 .item5 {
+  background: url(img/Screenshot_1.jpg);
+}
+.item6 {
   background: url(img/header.jpg);
 }
 
@@ -162,8 +173,8 @@ main section div.grid-item a:hover {
   #header {
     display: flex;
     background: white;
-    width: 80%;
-    margin: 50px auto;
+    width: 95%;
+    margin: 20px auto;
     border-radius: 15px;
     padding: 20px;
   }
@@ -178,34 +189,24 @@ main section div.grid-item a:hover {
   }
 
   main {
-    display: flex;
-    background-color: white;
-    width: 80%;
-    margin: auto;
+    background: white;
+    width: 95%;
+    margin: 20px auto;
     border-radius: 15px;
-  }
-
-  main article {
-    width: 25%;
-    padding: 20px;
-    border-right: 3px solid rgba(83, 97, 99, 0.6);
-    border-bottom: none;
-    margin: 20px;
+    padding-top: 20px;
   }
 
   main section {
     display: flex;
     flex-wrap: wrap;
-    width: 75%;
-    gap: 20px;
-    padding: 20px;
+    width: 95%;
+    gap: 10px;
   }
 
   main section {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
   }
 
   main section div.grid-item {
@@ -216,7 +217,81 @@ main section div.grid-item a:hover {
     align-items: flex-end;
   }
 
-.item1 {
+  .item1 {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+  .item2 {
+    grid-column: 3/5;
+    grid-row: 1;
+  }
+  .item3 {
+    grid-column: 1/5;
+    grid-row: 2;
+  }
+  .item4 {
+    grid-column: 1/4;
+    grid-row: 3;
+  }
+  .item5 {
+    grid-column: 4/5;
+    grid-row: 3;
+    background: url(img/simple-iphone.svg);
+    background-size: contain;
+  }
+  .item6 {
+    grid-column: 1/3;
+    grid-row: 4;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  #header {
+    width: 90%;
+    margin: 50px auto;
+  }
+
+
+  main {
+    display: flex;
+    background-color: white;
+    width: 90%;
+    margin: auto;
+    border-radius: 15px;
+  }
+
+  main article {
+    width: 20%;
+    padding: 10px;
+    border-right: 3px solid rgba(83, 97, 99, 0.6);
+    border-bottom: none;
+    margin: 10px;
+  }
+
+  main section {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    gap: 10px;
+    padding: 10px;
+  }
+
+  main section {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+  }
+
+  main section div.grid-item {
+    height: 25rem;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  .item1 {
     grid-column: 1/3;
     grid-row: 1;
   }
@@ -236,7 +311,8 @@ main section div.grid-item a:hover {
     grid-column: 4/5;
     grid-row: 3;
   }
-}
-
-@media screen and (min-width: 992px) {
+  .item6 {
+    grid-column: 1/3;
+    grid-row: 4;
+  }
 }
