--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
   background: #e3e3e3;
   height: 100vh;
+  font-family: "DM Sans", sans-serif;
 }
 
 /* header  */
@@ -116,14 +117,15 @@ main section div.grid-item {
   height: 20rem;
   margin: 10px 0;
   border-radius: 10px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  position: relative;
 }
 main section div.grid-item a {
+  position: absolute;
+  bottom: 0;
+  right: 0;
   background-color: #fff;
   padding: 5px 25px;
   border-radius: 15px;
@@ -138,7 +140,6 @@ main section div.grid-item a {
   margin: 10px;
   border: 1px solid rgba(73, 73, 73, 0.6);
   box-shadow: 1px 2px 0px rgba(0, 0, 0, 0.418);
-
 }
 
 main section div.grid-item a:hover {
@@ -146,8 +147,6 @@ main section div.grid-item a:hover {
   color: rgb(0, 55, 255);
   box-shadow: 1px 2px 0px rgb(0, 0, 0);
   background-color: #ececec;
-
-
 }
 
 .item1 {
@@ -170,6 +169,25 @@ main section div.grid-item a:hover {
 }
 .item8 {
   background: url(img/Bg.png);
+}
+.item9 {
+  background: url(img/goals\ &\ wishes.jpg);
+}
+#message9 {
+  display: none;
+  background-color: #ffbbb8;
+  color: #03539c;
+  padding: 15px 15px;
+  border-radius: 10px;
+  font-size: 1.3em;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+#message9 span {
+  color: #023b70;
+  font-size: 1.4em;
 }
 
 @media screen and (min-width: 576px) {
@@ -215,9 +233,6 @@ main section div.grid-item a:hover {
   main section div.grid-item {
     height: 25rem;
     width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
   }
 
   .item1 {
@@ -250,6 +265,10 @@ main section div.grid-item a:hover {
     grid-column: 1/5;
     grid-row: 5;
   }
+  .item9 {
+    grid-column: 1/2;
+    grid-row: 6;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -257,7 +276,6 @@ main section div.grid-item a:hover {
     width: 90%;
     margin: 50px auto;
   }
-
 
   main {
     display: flex;
@@ -293,9 +311,6 @@ main section div.grid-item a:hover {
   main section div.grid-item {
     height: 25rem;
     width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
   }
 
   .item1 {
