--- a/style.css
+++ b/style.css
@@ -167,13 +167,17 @@ main section div.grid-item a:hover {
 .item6 {
   background: url(img/header.jpg);
 }
+.item7 {
+  background: url(img/Untitled.png);
+}
 .item8 {
   background: url(img/Bg.png);
 }
 .item9 {
   background: url(img/goals\ &\ wishes.jpg);
 }
-#message9 {
+
+#message9, #message7 {
   display: none;
   background-color: #ffbbb8;
   color: #03539c;
@@ -185,7 +189,7 @@ main section div.grid-item a:hover {
   top: 0;
   width: 100%;
 }
-#message9 span {
+#message9 span, #message7 span {
   color: #023b70;
   font-size: 1.4em;
 }
@@ -259,6 +263,10 @@ main section div.grid-item a:hover {
   }
   .item6 {
     grid-column: 1/3;
+    grid-row: 4;
+  }
+  .item7 {
+    grid-column: 3/5;
     grid-row: 4;
   }
   .item8 {
