--- a/style.css
+++ b/style.css
@@ -195,12 +195,12 @@ main section div.grid-item a:hover {
   background: url(img/New\ Bitmap\ Image.jpg);
   border: 3px solid lightgray;
 }
-.item1 {
+.item {
   position: relative;
   width: 100%;
   height: 0;
 }
-.item1 iframe {
+.item iframe {
   position: absolute;
   top: 0;
   left: 0;
@@ -313,6 +313,10 @@ main section div.grid-item a:hover {
   }
   .item10 {
     grid-column: 2/3;
+    grid-row: 6;
+  }
+  .item2 {
+    grid-column: 3/5;
     grid-row: 6;
   }
   .item11 {
