--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   background: #e3e3e3;
   height: 100vh;
@@ -68,9 +69,11 @@ header a:hover {
   text-decoration: underline;
   color: rgb(0, 55, 255);
 }
+
 header li:first-of-type {
   margin-top: 20px;
 }
+
 header li {
   display: flex;
   justify-content: space-between;
@@ -82,6 +85,7 @@ header li {
   padding: 5px 20px;
   margin: 10px;
 }
+
 header img {
   width: 200px;
   height: 250px;
@@ -89,9 +93,11 @@ header img {
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.389);
   margin: 10px 0;
 }
+
 #fotoTablet {
   display: none;
 }
+
 /* main  */
 main {
   background-color: white;
@@ -135,6 +141,7 @@ main section div.grid-item {
   background-repeat: no-repeat;
   position: relative;
 }
+
 main section div.grid-item a {
   position: absolute;
   bottom: 0;
@@ -165,44 +172,60 @@ main section div.grid-item a:hover {
 .item11 {
   background: url(img/hamburger.jpg);
 }
+
 .item12 {
   background: url(img/game.jpg);
 }
+
 .item3 {
   background: url(img/luxcrain.jpg);
 }
+
 .item4 {
   background: url(img/header_my.png);
 }
+
 .item5 {
   background: url(img/Screenshot_1.jpg);
   border: 3px solid lightgray;
 }
+
 .item6 {
   background: url(img/header.jpg);
 }
+
 .item7 {
   background: url(img/Untitled.png);
   border: 3px solid lightgray;
 }
+
 .item8 {
   background: url(img/Bg.png);
 }
+
 .item9 {
   background: url(img/goals\ &\ wishes.jpg);
 }
+
 .item10 {
   background: url(img/New\ Bitmap\ Image.jpg);
   border: 3px solid lightgray;
 }
+
 .item13 {
   background: url(img/React_2.jpg);
 }
+
+.item14 {
+  background: url(img/R_1.jpg);
+}
+
 .item {
   position: relative;
   width: 100%;
   height: 0;
 }
+
 .item iframe {
   position: absolute;
   top: 0;
@@ -212,7 +235,10 @@ main section div.grid-item a:hover {
   border-radius: 15px;
 }
 
-#message9, #message7, #message10, #message6 {
+#message9,
+#message7,
+#message10,
+#message6 {
   display: none;
   background-color: #ffbbb8;
   color: #03539c;
@@ -224,7 +250,11 @@ main section div.grid-item a:hover {
   top: 0;
   width: 100%;
 }
-#message9 span, #message7 span, #message10 span, #message6 span {
+
+#message9 span,
+#message7 span,
+#message10 span,
+#message6 span {
   color: #023b70;
   font-size: 1.4em;
 }
@@ -238,16 +268,20 @@ main section div.grid-item a:hover {
     border-radius: 15px;
     padding: 20px;
   }
+
   #fotoMobile {
-  display: none;
-}
-#fotoTablet {
-  display: inline-flex;
-}
+    display: none;
+  }
+
+  #fotoTablet {
+    display: inline-flex;
+  }
+
   #header div {
     width: 50%;
     text-align: center;
   }
+
   #header div:first-of-type {
     border-right: 3px solid rgba(83, 97, 99, 0.6);
     border-bottom: none;
@@ -284,55 +318,72 @@ main section div.grid-item a:hover {
     grid-row: 1;
     /* padding-bottom: 56.25%; */
   }
+
   .item3 {
     grid-column: 1/5;
-    grid-row: 2;
+    grid-row: 3;
   }
+
   .item4 {
     grid-column: 1/4;
-    grid-row: 3;
+    grid-row: 4;
   }
+
   .item5 {
     grid-column: 4/5;
-    grid-row: 3;
+    grid-row: 4;
     background: url(img/simple-iphone.svg);
     background-size: contain;
   }
+
   .item6 {
     grid-column: 1/3;
-    grid-row: 4;
-  }
-  .item7 {
-    grid-column: 3/5;
-    grid-row: 4;
-  }
-  .item8 {
-    grid-column: 1/5;
     grid-row: 5;
   }
+
+  .item7 {
+    grid-column: 3/5;
+    grid-row: 5;
+  }
+
+  .item8 {
+    grid-column: 1/5;
+    grid-row: 6;
+  }
+
   .item9 {
     grid-column: 1/2;
-    grid-row: 6;
+    grid-row: 7;
   }
+
   .item10 {
     grid-column: 2/3;
-    grid-row: 6;
+    grid-row: 7;
   }
+
   .item2 {
     grid-column: 3/5;
-    grid-row: 6;
+    grid-row: 7;
   }
+
   .item11 {
     grid-column: 1/3;
-    grid-row: 7;
+    grid-row: 8;
   }
+
   .item12 {
     grid-column: 3/5;
-    grid-row: 7;
+    grid-row: 8;
   }
+
   .item13 {
     grid-column: 1/3;
-    grid-row: 8;
+    grid-row: 2;
+  }
+
+  .item14 {
+    grid-column: 3/5;
+    grid-row: 2;
   }
 }
 
@@ -382,29 +433,24 @@ main section div.grid-item a:hover {
     grid-column: 1/5;
     grid-row: 1;
   }
+
   .item3 {
     grid-column: 1/5;
-    grid-row: 2;
+    grid-row: 3;
   }
+
   .item4 {
     grid-column: 1/4;
-    grid-row: 3;
-  }
-  .item5 {
-    grid-column: 4/5;
-    grid-row: 3;
-  }
-  .item6 {
-    grid-column: 1/3;
     grid-row: 4;
   }
-  
-  .item11 {
-    grid-column: 1/3;
-    grid-row: 7;
+
+  .item5 {
+    grid-column: 4/5;
+    grid-row: 4;
   }
-  .item12 {
-    grid-column: 3/5;
-    grid-row: 7;
+
+  .item6 {
+    grid-column: 1/3;
+    grid-row: 5;
   }
 }
