--- a/style.css
+++ b/style.css
@@ -220,6 +220,10 @@ main section div.grid-item a:hover {
   background: url(img/R_1.jpg);
 }
 
+.item15 {
+  background: url(img/React_3.jpg);
+}
+
 .item {
   position: relative;
   width: 100%;
@@ -384,6 +388,10 @@ main section div.grid-item a:hover {
   .item14 {
     grid-column: 3/5;
     grid-row: 2;
+  }
+  .item15 {
+    grid-column: 1/3;
+    grid-row: 9;
   }
 }
 
