--- a/style.css
+++ b/style.css
@@ -393,6 +393,10 @@ main section div.grid-item a:hover {
     grid-column: 1/3;
     grid-row: 9;
   }
+  .item16 {
+    grid-column: 3/5;
+    grid-row: 9;
+  }
 }
 
 @media screen and (min-width: 992px) {
