--- a/style.css
+++ b/style.css
@@ -397,6 +397,10 @@ main section div.grid-item a:hover {
     grid-column: 3/5;
     grid-row: 9;
   }
+  .item17 {
+    grid-column: 1/3;
+    grid-row: 10;
+  }
 }
 
 @media screen and (min-width: 992px) {
